--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -21,17 +21,24 @@
           </tr>
         </thead>
 
-         <tbody>
+  <tbody>
     <% @orders.each do |order| %>
       <tr>
         <td><%= order.created_at.strftime('%Y年%m月%d日') %></td>
         <td>〒<%= order.postal_code %><br>
 				      <%= order.address %><br>
-				      </td>
-        <td><%= order.name %></td>
-        <td></td>
+				      <%= order.name %></td>
+              <td>
+              <% order.order_details.each do |orderdetail| %>
+				        <%= orderdetail.item.name %>1
+			        <% end %>
+
+			        </td>
+
+            <td><%= order.total_payment %></td>
+
         <td><%= order.status_i18n %></td>
-        <td><%= link_to "表示する", public_order_path(order.id), class: "btn btn-danger btn-sm" %></div>
+        <td><%= link_to "表示する", public_order_path(order.id), class: "btn btn-primary btn-sm" %></div>
       </tr>
     <% end %>
   </tbody>
