--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -14,30 +14,24 @@
     <strong>注文情報</strong>
     <tr>
       <th bgcolor = "lavender">注文日</th>
-      <td>
-
-      </td>
+    <td><%= @order.created_at.strftime('%Y年%m月%d日') %></td>
     </tr>
 
   <tr>
     <th bgcolor = "lightsteelblue">配送先</th>
-      <td>
-
-      </td>
+      <td>〒<%= @order.postal_code %><br>
+      	  <%= @order.address %><br>
+      	  <%= @order.name %></td>
   </tr>
 
   <tr>
     <th bgcolor = "lightsteelblue">支払方法</th>
-      <td>
-
-      </td>
+      <td><%= @order.payment_method_i18n %></td>
   </tr>
 
   <tr>
     <th bgcolor = "lightsteelblue">ステータス</th>
-      <td>
-
-      </td>
+      <td><%= @order.status_i18n %></td>
   </tr>
   </table>
 </div>
@@ -47,23 +41,17 @@
   <strong>請求情報</strong>
   <tr>
     <th bgcolor = "lightsteelblue">商品合計</th>
-      <td>
-
-      </td>
-  </tr>
+      <td>¥<%= @order.total_payment %></td>
+    </tr>
 
   <tr>
     <th bgcolor = "lightsteelblue">配送料</th>
-      <td>
-
-      </td>
+      <td>¥<%= @order.shipping_cost %></td>
   </tr>
 
   <tr>
     <th bgcolor = "lightsteelblue">ご請求額</th>
-      <td>
-
-      </td>
+      <td>¥<%= @order.total_payment + @order.shipping_cost %></td>
   </tr>
 
   <% end %>
@@ -90,7 +78,7 @@
         </thead>
         <% total = 0 %>
 
-        <tbody>
+ <tbody>
     <% @cart_items.each do |cart_item| %>
       <tr>
         <td><%= cart_item.item.name %></td>
