--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -29,8 +29,8 @@
 				      <%= order.address %><br>
 				      <%= order.name %></td>
               <td>
-              <% order.order_details.each do |orderdetail| %>
-				        <%= orderdetail.item.name %>1
+              <% order.order_details.each do |order_detail| %>
+				        <%= order_detail.item.name %>1
 			        <% end %>
 
 			        </td>
