--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -78,16 +78,13 @@
         </thead>
         <% total = 0 %>
 
- <tbody>
-    <% @cart_items.each do |cart_item| %>
-      <tr>
-        <td><%= cart_item.item.name %></td>
-        <td><%= cart_item.item.with_tax_price %>円</td>
-        <td><%= cart_item.amount %></td>
-        <td><%= cart_item.subtotal %>円</td>
-        <% total += cart_item.subtotal %>
-      </tr>
-<% end %>
+<tbody>
+      <% @orders.each do |order| %>
+
+
+
+  <% end %>
+</tbody>
 </table>
 </div>
 </div>
