--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -30,7 +30,7 @@
 				      <%= order.name %></td>
               <td>
               <% order.order_details.each do |order_detail| %>
-				        <%= order_detail.item.name %>1
+				        <%= order_detail.item.name %>
 			        <% end %>
 
 			        </td>
