--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -30,7 +30,7 @@
 				      <%= order.name %></td>
               <td>
               <% order.order_details.each do |order_detail| %>
-				        <%= order_detail.item.name %>
+				        <%= order_detail.item.name %><br />
 			        <% end %>
 
 			        </td>
@@ -45,3 +45,5 @@
 
 
   </table>
+
+  <%= paginate @orders %>
