--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -79,14 +79,13 @@
         <% total = 0 %>
 
 <tbody>
-      <% @orders.each do |order| %>
-      <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
 
-
+  <% @order_details.each do |order_detail| %>
+  <tr>
+    <td><%= order_detail.item.name %></td>
+    <td><%= order_detail.item.with_tax_price %></td>
+    <td><%= order_detail.amount %></td>
+    <td><%= order_detail.item.price * order_detail.amount %></td>
   </tr>
   <% end %>
 
@@ -97,6 +96,7 @@
 </div>
 
 </tbody>
+
 
 
 
