--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -16,22 +16,19 @@
         <th colspan="3"></th>
       </tr>
     </thead>
-    </table>
 
 
-<% @orders.each do |order| %>
-  <tr>
-    <td><%= order.created_at %></td>
-    <td><%= order.customer_id %></td>
 
-    <% @orderDetails.each do |orderDetail| %>
-      <td><%= orderDetail.amount %></td>
-    <% end %>
-
+ <tbody>
     <% @orders.each do |order| %>
+    <tr>
+      <td><%= link_to order.created_at.strftime('%Y年%m月%d日'), admin_order_path %></td>
+      <td><%= order.customer.full_name %></td>
+      <td></td>
       <td><%= order.status_i18n %></td>
+    </tr>
     <% end %>
-  </tr>
+  </tbody>
+  </table>
 
-<% end %>
-
+<%= paginate @orders %>
