--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -5,7 +5,7 @@
     </div>
 
 
-  <%= form_with model: @order, url: admin_orders_path do |f| %>
+  <%= form_with model: @order, url: admin_order_path do |f| %>
 
   <div class="container">
     <div class="row mt-3 justify-content-center">
@@ -96,7 +96,7 @@
 
 
     </tr>
-
+<% end %>
 
     </tbody>
 
