--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,74 +1,64 @@
-<div class="container">
-  <div class="row">
-
-
-
-<div class="row">
-  <div class="col-md">
-    <div class="p-3 mb-2 bg-secondary text-dark">ジャンル一覧・追加</div>
-  </div>
-</div>
-  <div class="container px-5 px-sm-0">
-      <div class="row">
-        <div class="col-md">
-
-
-
-    <%= form_with model: @genre,url: admin_genres_path do |f| %>
-
-    <div class="container text-center">
+<p id="notice"></p>
+  <div class="container">
     <div class="row">
+      <div class="p-3 mb-2 bg-secondary text-light">ジャンル一覧・追加</div>
+    </div>
+  </div>
 
-       <div class="col-md-2">
-        <div>ジャンル名</div>
-      </div>
 
-       <div class="col-md-2">
-        <div><%= f.text_field :name %></div>
-      </div>
+  <%= form_with model: @genre,url: admin_genres_path do |f| %>
 
-       <div class="col-md-2">
-        <div><%=f.submit '新規投稿', class: "btn btn-success" %></div>
-      </div>
-      <% end %>
+    <div class="container">
+      <div class="row mt-3">
+        <div class="col-2">
+          <div>ジャンル名</div>
+        </div>
+        <div class="col-3">
+          <div><%= f.text_field :name, placeholder: "ジャンル名" %></div>
+        </div>
+        <div class="col-3">
+          <div><%=f.submit '新規投稿', class: "btn btn-success" %></div>
+        </div>
 
+  <% end %>
 
       </div>
     </div>
-  </div>
-    </main>
 
-<main>
+
+
+
   <p id="notice"></p>
     <div class="container px-5 px-sm-0">
-    <div class="row">
-      <div class=col-md-4>
+      <div class="row">
+        <div class=col-md-4>
+          <table class="table">
+          <thead>
+            <tr>
+            <th>ジャンル</th>
+            <th></th>
+            <th colspan="2"></th>
+            </tr>
+          </thead>
+
+   <tbody>
+      <% @genres.each do |genre| %>
+        <tr>
+        <td><%= genre.name %></td>
+        <td><%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-sm btn-success" %></td>
+        </tr>
+      <% end %>
+    </tbody>
+
+          </table>
+        </div>
+      </div>
+    </div>
 
 
-  <table class="table">
-    <thead>
-      <tr>
-        <th>ジャンル</th>
-        <th></th>
-        <th colspan="2"></th>
-      </tr>
-    </thead>
-
- <tbody>
-    <% @genres.each do |genre| %>
-      <tr>
-
-      <td><%= genre.name %></td>
-      <td><%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-sm btn-success" %></td>
-      </tr>
-    <% end %>
-  </tbody>
-
-  </table>
 
 
 
-</main>
 
 
 
