--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -2,10 +2,19 @@
   <p id="notice"></p>
   <div class="container text-center">
     <div class="row">
+      <div class="col-2">
       <div class="p-3 mb-2 bg-secondary text-light">商品一覧</div>
-　　</div>
+      </div>
 
-　　<table class="table">
+
+      <div class="col text-right">
+    <%= link_to new_admin_item_path do %>
+     <i class="fas fa-plus-circle fa-2x"></i>
+    <% end %>
+    </div>
+    </div>
+
+    <table class="table">
     <thead>
       <tr>
         <th>商品ID</th>
@@ -16,6 +25,8 @@
         <th colspan="3"></th>
       </tr>
     </thead>
+
+
 
     <tbody>
     <% @items.each do |item| %>
@@ -38,4 +49,4 @@
 
     </table>
 
-    <%= paginate @items %>
+<%= paginate @items %>
