--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,35 +1,37 @@
 
-  <p id="notice"></p>
+<p id="notice"></p>
   <div class="container text-center">
     <div class="row">
       <div class="p-3 mb-2 bg-secondary text-light">商品詳細</div>
     </div>
   </div>
 
-
-  <%= form_with model: @item, url: admin_item_path do |f| %>
-
+<div class="container">
+  <div class="row mt-3 justify-content-center">
+    <div class="col-4">
 
   <%= image_tag @item.image %>
+  </div>
 
 
+<div class="col-8">
   <div class="container">
-    <div class="row mt-3 justify-content-center">
+    <div class="row mt-3">
       <div class="col-2">
         商品名
       </div>
-      <div class="col-2">
+      <div class="col-4">
         <%= @item.name %>
       </div>
     </div>
   </div>
 
   <div class="container">
-    <div class="row mt-2 justify-content-center">
+    <div class="row mt-2">
       <div class="col-2">
         商品説明
       </div>
-      <div class="col-2">
+      <div class="col-4">
         <%= @item.introduction %>
       </div>
     </div>
@@ -37,22 +39,22 @@
 
 
   <div class="container">
-    <div class="row mt-2 justify-content-center">
+    <div class="row mt-2">
       <div class="col-2">
         ジャンル
       </div>
-      <div class="col-2">
+      <div class="col-4">
         <%= @item.genre.name %>
       </div>
     </div>
   </div>
 
   <div class="container">
-    <div class="row mt-2 justify-content-center">
+    <div class="row mt-2">
       <div class="col-2">
         税抜価格
       </div>
-      <div class="col-2">
+      <div class="col-4">
         <%= @item.price %>
       </div>
     </div>
@@ -60,11 +62,11 @@
 
 
   <div class="container">
-    <div class="row mt-2 justify-content-center">
-      <div class="col-2">
+    <div class="row mt-2">
+      <div class="col-3">
         販売ステータス
       </div>
-      <div class="col-2">
+      <div class="col-4">
         <% if @item.is_active == true %>
           販売中
         <% else %>
@@ -76,7 +78,7 @@
 
 
   <div class="container">
-    <div class="row mt-2 justify-content-center">
+    <div class="row mt-2 text-center">
       <div class="col-2">
       <div><%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-sm btn-success" %></div>
       </div>
@@ -84,4 +86,6 @@
   </div>
 
 
-　<% end %>
+</div>
+</div>
+</div>
