--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="col text-center">
             <%= link_to "退会しない", public_path, class: "btn btn-sm btn-primary" %>
-            <%= link_to "退会する", public_withdraw_user_path(@customer), method: :patch, class: "btn btn-sm btn-danger" %>
+            <%= link_to "退会する", public_withdraw_user_path(@customer), method: :patch, class: "btn btn-sm btn-danger", "data-confirm" => "本当に退会しますか？" %>
           </div>
         </div>
     </div>
