--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -3,8 +3,8 @@
     <div class="row">
       <div class="p-3 mb-2 bg-secondary text-light">ショッピングカート</div>
     </div>
-    
-    <% if @cart_items.any? %>
+
+
 
 
   <table border="1" style="border-collapse: collapse">
@@ -64,4 +64,7 @@
   <td><%= link_to "買い物を続ける", public_path, class: "btn btn-primary btn-sm" %></td>
 </div>
 
+
+<% if !@cart_items.blank? %>
 <td><%= link_to "情報入力に進む", new_public_order_path, class: "btn btn-warning btn-sm" %></td>
+<% end %>
